<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BackupFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frag_back_recycler_slots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_slot" />

    <View
        android:id="@+id/frag_back_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_back_recycler_slots" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frag_back_recycler_config"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="180dp"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_back_recycler_slots"
        tools:listitem="@layout/item_channel_display" />

    <Button
        android:id="@+id/frag_back_button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/frag_back_button_load"
        app:layout_constraintEnd_toEndOf="@+id/frag_back_button_load"
        app:layout_constraintStart_toStartOf="@+id/frag_back_button_load" />

    <Button
        android:id="@+id/frag_back_button_load"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/load"
        app:layout_constraintBottom_toTopOf="@+id/frag_back_button_delete"
        app:layout_constraintEnd_toEndOf="@+id/frag_back_button_delete"
        app:layout_constraintStart_toStartOf="@+id/frag_back_button_delete" />

    <Button
        android:id="@+id/frag_back_button_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>